--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "zenghuang19/sensitive-words",
     "description": "敏感词检测 敏感词替换",
     "type": "library",
+    "keywords": ["laravel-admin", "laravel", "extension", "sensitive"],
     "license": "MIT",
     "authors": [
         {
@@ -10,12 +11,23 @@
         }
     ],
     "require": {
-        "php":">=5.6",
+        "php":">=7.0.0",
         "ext-mbstring": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "psr-4": {
             "Codetrainee\\SensitiveWords\\": "src/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Codetrainee\\SensitiveWords\\SafeServiceProvider"
+            ]
+
         }
     }
 
