--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
     "require-dev": {
         "phpunit/phpunit": "~6.0"
     },
-    "autoload": {
-        "psr-4": {
-            "Codetrainee\\SensitiveWords\\": "src/"
-        }
-    },
+//    "autoload": {
+//        "psr-4": {
+//            "Codetrainee\\SensitiveWords\\": "src/"
+//        }
+//    },
     "extra": {
         "laravel": {
             "providers": [
